@@ -2,7 +2,7 @@
 // Licensed under the GNU GPL Version 2.
 //
 // First added:  2005-01-28
-// Last changed: 2006-07-06
+// Last changed: 2006-08-08
 
 #ifndef __MONO_ADAPTIVE_NEWTON_SOLVER_H
 #define __MONO_ADAPTIVE_NEWTON_SOLVER_H
@@ -10,13 +10,14 @@
 #include <dolfin/constants.h>
 #include <dolfin/uBlasVector.h>
 #include <dolfin/uBlasDummyPreconditioner.h>
-#include <dolfin/uBlasKrylovSolver.h>
 #include <dolfin/MonoAdaptiveJacobian.h>
 #include <dolfin/TimeSlabSolver.h>
 
 namespace dolfin
 {
   
+  class uBlasKrylovSolver;
+  class uBlasLUSolver;
   class ODE;
   class MonoAdaptiveTimeSlab;
   class NewMethod;
@@ -42,7 +43,7 @@ namespace dolfin
     void start();
     
     // Make an iteration
-    real iteration(uint iter, real tol);
+    real iteration(real tol, uint iter, real d0, real d1);
 
     /// Size of system
     uint size() const;
@@ -58,19 +59,23 @@ namespace dolfin
     // Evaluate -F(x) for implicit system: Mu' = f
     void FevalImplicit(uBlasVector& F);
 	
+    // Choose  linear solver
+    void chooseLinearSolver();
+
     // Numerical evaluation of the Jacobian used for testing
     void debug();
-
+    
     bool implicit;  // True if ODE is implicit
     bool piecewise; // True if M is piecewise constant
 
-    MonoAdaptiveTimeSlab& ts;   // The time slab;
-    MonoAdaptiveJacobian A;     // Jacobian of time slab system
-    uBlasVector dx;             // Increment for Newton's method
-    uBlasVector b;              // Right-hand side -F(x)
-    uBlasDummyPreconditioner pc;// Preconditioner
-    uBlasKrylovSolver solver;   // Linear solver
-    uBlasVector Mu0;            // Precomputed product M*u0 for implicit system
+    MonoAdaptiveTimeSlab& ts;    // The time slab;
+    MonoAdaptiveJacobian A;      // Jacobian of time slab system
+    uBlasVector dx;              // Increment for Newton's method
+    uBlasVector b;               // Right-hand side -F(x)
+    uBlasDummyPreconditioner pc; // Preconditioner
+    uBlasKrylovSolver* krylov;   // Iterative linear solver
+    uBlasLUSolver* lu;           // Direct linear solver
+    uBlasVector Mu0;             // Precomputed product M*u0 for implicit system
     
   };
 
